tests/valid/function/function_value_param_call.facet
fn apply(f: unrestricted fn(unrestricted isize) -> unrestricted isize, x: unrestricted isize) -> unrestricted isize {
  (f x)
}
