tests/invalid/linear_affine_error/if_linear_consumed_then_not_else.facet
fn f(cond: unrestricted bool, x: linear isize) -> unrestricted () {
  if cond { (drop x) } else { () }
}
